<resources>
    <string name="app_name">Samgu</string>
    <string name="logo">logo</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="or">OR</string>
    <string name="listening">Listening...</string>
    <string name="small_or">or</string>
    <string name="browse_music">Browse music</string>
    <string name="search">Search</string>
    <string name="no_songs_found">No songs found</string>
    <string name="title_activity_samgu">SamguActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
